--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+html {
+  scroll-behavior: smooth;
 }
 
 @media (prefers-reduced-motion: no-preference) {
